<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <AutoCompleteTextView
            android:id="@+id/locationAutoCompleteTextView"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/home_search_bar"
            android:completionThreshold="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:hint="Search"
            android:paddingStart="40dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="42dp"
            android:layout_height="27dp"
            app:layout_constraintBottom_toBottomOf="@+id/locationAutoCompleteTextView"
            app:layout_constraintStart_toStartOf="@+id/locationAutoCompleteTextView"
            app:layout_constraintTop_toTopOf="@+id/locationAutoCompleteTextView"
            app:srcCompat="@android:drawable/ic_menu_search" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/locationAutoCompleteTextView"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="start|center_vertical"
                android:text="Sign In" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/map_activity_profile_button"
                android:layout_width="49dp"
                android:layout_height="50dp"
                android:layout_gravity="center"

                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/CircleImageView"
                app:srcCompat="@drawable/cat" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_nav_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/gray"
            app:buttonGravity="bottom"
            app:fabAlignmentMode="center"
            app:fabCradleMargin="8dp"
            app:fabCradleRoundedCornerRadius="16dp"
            app:fabCradleVerticalOffset="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/bottom_navbar_home_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/home_button_image"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/baseline_home_24" />

                    <TextView
                        android:id="@+id/home_button_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Home"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:orientation="vertical"
                    tools:visibility="invisible">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/baseline_home_24" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Home"
                        android:textAlignment="center"
                        android:visibility="invisible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bottom_navbar_profile_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:background="@drawable/circular_gray_background"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/profile_button_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/avatar" />

                    <TextView
                        android:id="@+id/profile_button_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Profile"
                        android:textAlignment="center" />

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bottom_navbar_upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="Upload"
            android:src="@drawable/baseline_add_24"
            app:backgroundTint="@color/tomatoRed"
            app:layout_anchor="@id/bottom_nav_bar"
            app:layout_anchorGravity="center"
            app:maxImageSize="30dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/map_activity_chat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/lightTomatoRed"
        android:src="@drawable/chat_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/lightTomatoRed" />

    <Button
        android:id="@+id/filter_post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circular_gray_background"
        android:backgroundTint="@color/gray"
        android:text="filter"
        android:padding="0dp"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>
