...
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">

    <!-- NestedScrollView to make the content scrollable -->

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_nav_bar"
...
            </LinearLayout>
        </ScrollView>

        <!-- Chat Section -->

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"

            android:text="Sign out"
...
