...
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

        <LinearLayout
            android:id="@+id/delete_post_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/rounded_rectangular_red"
            android:orientation="horizontal"
            android:padding="10dp"
...
